--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSY6jz9705lFiE7gDi4q9sNmkZc2UpoCGe_UA&s" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyFeedback</title>
   </head>
